--- a/templates/confirmStyle.html
+++ b/templates/confirmStyle.html
@@ -46,7 +46,7 @@
 
                     <div class="flex justify-end mt-10">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button type="submit" name="action" value="previous">
+                            <button type="submit" name="action" value="prev">
                                 <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Назад">
                             </button>
                             
